# nanoschnack

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  build_tokenizer_corpus.py  manifest  pyproject.toml  tokenizer.go  tokenizer_test.go
doc/: vllm-setup.md  vllm-transformers-wrapper.md
model/: DEVEL.md  __init__.py  autotune.py  chat.py  checkpointer.py  config.py  ddp_debug.py  debug.py  device.py  gpt.py  input.py  inspection-gpt2.ipynb  inspection-gpt2.py  inspection.ipynb  inspection.py  loader.py  loader_benchmark.py  nanoschnack.ipynb  nanoschnack.py  plot.py  progress.py  resume.py  scheduler.py  sync.py  text_format.py  tokenizer.py  training.ipynb  training.py  transparent_llm_adapter.py
scripts/: bootstrap.sh  build_germanquad.py  build_mlqa_de.py  build_oasst_de.py  create-goethe.sh  download-german-commons-samples.sh  jupytext-sync.sh  print_posttraining_blocks.py  print_tokens.py
tests/: test_build_tokenizer_corpus.py  test_chat_checkpoint.py  test_chat_decode.py  test_checkpoint_positional_config.py  test_checkpoint_tokenizer_config.py  test_checkpointer_compiled.py  test_checkpointer_legacy.py  test_checkpointer_optimizer_reset.py  test_checkpointer_snapshots.py  test_checkpointer_vocab_resize.py  test_config.py  test_debug.py  test_go_tokenizer_cli.py  test_gpt_initialization.py  test_gpt_rotary.py  test_loader.py  test_loader_dataset_specs.py  test_loader_interleave.py  test_loader_parquet_rows.py  test_loader_pickling.py  test_loader_profile.py  test_loader_resume_plan.py  test_loader_shuffle.py  test_plot_completion_model.py  (+8 more)
(+27 files in other folders)
